--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -88,6 +88,7 @@
 <script src="~/Scripts/angular.min.js"></script>
 <script src="~/Scripts/angular-ui-router.min.js"></script>
 <script src="~/Scripts/angular-animate.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.js"></script>
 <script src="~/Scripts/app/app.module.js"></script>
 <script src="~/Scripts/app/services.factory.js"></script>
 <script src="~/Scripts/app/utilities.factory.js"></script>
