--- a/ProjectUbuild/Views/Loan/Apply.cshtml
+++ b/ProjectUbuild/Views/Loan/Apply.cshtml
@@ -77,7 +77,7 @@
                                         <div class="col-md-6">
                                             <div class="form-group ">
                                                 <label>Account Number</label>
-                                                <input type="text" class="form-control" data-ng-model="vm.applyModel.accountNumber" placeholder="GHL customers only" readonly="">
+                                                <input type="text" class="form-control" data-ng-model="vm.applyModel.accountNumber" placeholder="Verified GHL customers only" readonly="">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
